--- a/css/sophiayang.webflow.css
+++ b/css/sophiayang.webflow.css
@@ -123,6 +123,23 @@ p {
   -o-transition: all 200ms ease;
   transition: all 200ms ease;
 }
+.button.dribbble {
+  background-image: url(../images/dribbble.png);
+  background-position: 50% 50%;
+  background-size: 30px;
+  background-repeat: no-repeat no-repeat;
+  -webkit-transition: all 200ms ease;
+  -o-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+.button:hover.dribbble:hover {
+  background-color: #999;
+  background-image: url(../images/dribbble.png);
+  background-position: 50% 50%;
+  -webkit-transition: all 200ms ease;
+  -o-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
 .button.weibo {
   background-image: url(../images/weibo.png);
   background-position: 50% 50%;
